--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"express-prom-bundle": "^6.4.1",
 		"helmet": "^5.0.2",
 		"joi": "^17.6.0",
 		"mongodb": "^3.7.3",
+		"prom-client": "^14.0.1",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.3.6"
 	},
