--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"express-prom-bundle": "^6.4.1",
 		"helmet": "^5.0.2",
 		"joi": "^17.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^3.7.3",
 		"prom-client": "^14.0.1",
 		"reflect-metadata": "^0.1.13",
@@ -31,6 +32,7 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.1",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/node": "^17.0.23",
 		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.19.0",
