--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node dist/server.js",
 		"dev": "nodemon app/server.ts",
-		"build": "tsc",
+		"build": "webpack",
 		"lint": "eslint . --ext .ts",
 		"test": "jest",
 		"cov": "jest --coverage"
@@ -25,7 +25,8 @@
 		"mongodb": "^3.7.3",
 		"prom-client": "^14.0.1",
 		"reflect-metadata": "^0.1.13",
-		"typeorm": "^0.3.6"
+		"typeorm": "^0.3.6",
+		"webpack-node-externals": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.2",
@@ -45,7 +46,9 @@
 		"prettier": "^2.6.2",
 		"supertest": "^6.2.2",
 		"ts-jest": "^27.1.4",
+		"ts-loader": "^9.2.9",
 		"ts-node": "^10.7.0",
-		"typescript": "^4.6.3"
+		"typescript": "^4.6.3",
+		"webpack-cli": "^4.9.2"
 	}
 }
