--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
 		"test": "jest",
 		"cov": "jest --coverage"
 	},
+	"keywords": [
+		"express",
+		"node",
+		"rest-api",
+		"api"
+	],
 	"author": "Yunus Kalkan",
 	"license": "MIT",
 	"dependencies": {
