--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ MONGODB_PORT=27017
 MONGODB_DATABASE=admin
 MONGIDB_PASSWORD=test
 JWT_TOKEN=123
+POSTGRES_PASSWORD=test
+POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+NODE_ENV=development
